@@ -12,13 +12,14 @@ var Errors = require('data-elevator/lib/errors/elevator-errors');
 var BaseLevelController = require('data-elevator/lib/level-controllers/base-level-controller.js');
 var Level = require('data-elevator/lib/level-controllers/level.js');
 
+var elasticSearchClient = null;
+
+
 /**
  * Constructor
  * @param config
  */
 var ElasticSearchLevelController = function(config) {
-    this.client = null;
-    
     ElasticSearchLevelController.super_.apply(this, arguments);
     
     if(!config.levelControllerConfig.connectionOptions) {
@@ -41,10 +42,10 @@ util.inherits(ElasticSearchLevelController, BaseLevelController);
  * @returns client 
  */
 ElasticSearchLevelController.prototype.getClient = function() {
-    if(!this.client) {
-        this.client =  ElasticSearch.Client(this.config.levelControllerConfig.connectionOptions);
+    if(!elasticSearchClient) {
+        elasticSearchClient =  ElasticSearch.Client(this.config.levelControllerConfig.connectionOptions);
     }
-    return this.client;
+    return elasticSearchClient;
 }
 
 /**
